example-app/KubeFiles/ingress/ingress-nginx-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2   #new 
  name: example-app
  namespace: example-app
spec:
  tls:
  - hosts:
    - nikhil.test
    secretName: nick-tls-secret
  rules:
  - host: nikhil.test
    http:
      paths:
      - pathType: Prefix
        path: /v2(/|$)(.*)
        backend:
          serviceName: example-service
          servicePort: 2002
